# transcriber

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.cuda  LICENSE  README.md  alembic.ini  docker-compose.yml  pyproject.toml  pytest.ini  requirements.in  requirements.txt
.github/workflows/: workflow.yml
migrations/: env.py
migrations/versions/: 2ea725baad39_initial_commit.py
scripts/: entrypoint.sh
src/: __init__.py  config.py  lifecycle.py  main.py  routes.py  schemas.py
src/auth/: routes.py  schemas.py
src/auth/security/: dependencies.py  schemas.py  token.py
src/database/: config.py
src/exceptions/: handlers.py
src/recognition/: dependencies.py  recognizer.py  routes.py  schemas.py  services.py  utils.py
src/transcription/: dependencies.py  enums.py  routes.py  schemas.py  services.py  speech_transcription.py  utils.py
src/users/: dependencies.py  models.py  repositories.py  routes.py  schemas.py  services.py
tests/: test_main.py
tests/auth/: test_routes.py
tests/auth/security/: test_passwords.py  test_token.py
